<resources>
    <string name="app_name">Pin Login</string>
    <string name="app_logo">App logo</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="clear_all">Clear all</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
</resources>
