<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mscore"
    tools:context="vishnu.android.pinlogin.PinLoginActivity">
    <RelativeLayout
        android:id="@+id/relative_footer"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp">
        <ImageView
            android:contentDescription="@string/logout"
            android:id="@+id/img_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logout"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"/>
        <TextView
            android:layout_below="@id/img_logout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"/>
        <ImageView
            android:contentDescription="@string/share"
            android:id="@+id/img_share"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/share"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/img_share"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/relative_footer">
        <LinearLayout
            android:id="@+id/linear_key_pad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="UselessParent">
            <ImageView
                android:contentDescription="@string/app_logo"
                android:src="@drawable/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
            <RelativeLayout
                android:id="@+id/relative_show_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                >
                <Button
                    android:id="@+id/btn_pswrd_one"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    style="@style/empty_show_password_righ_aligned"/>
                <Button
                    android:id="@+id/btn_pswrd_two"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    style="@style/empty_show_password_righ_aligned"
                    android:layout_toRightOf="@id/btn_pswrd_one"
                    android:layout_toEndOf="@+id/btn_pswrd_one"/>
                <Button
                    android:id="@+id/btn_pswrd_three"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    style="@style/empty_show_password_righ_aligned"
                    android:layout_toRightOf="@id/btn_pswrd_two"
                    android:layout_toEndOf="@+id/btn_pswrd_two"/>
                <Button
                    android:id="@+id/btn_pswrd_four"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    style="@style/empty_show_password"
                    android:layout_toRightOf="@id/btn_pswrd_three"
                    android:layout_toEndOf="@+id/btn_pswrd_three"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relative_row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp">
                <Button
                    android:id="@+id/btn_keypad_one"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad_right_aligned"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/one"/>
                <Button
                    android:id="@+id/btn_keypad_two"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad_right_aligned"
                    android:text="@string/two"
                    android:layout_toRightOf="@id/btn_keypad_one"
                    android:layout_toEndOf="@+id/btn_keypad_one"
                    />
                <Button
                    android:id="@+id/btn_keypad_three"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad"
                    android:text="@string/three"
                    android:layout_toRightOf="@id/btn_keypad_two"
                    android:layout_toEndOf="@id/btn_keypad_two"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relative_row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp">
                <Button
                    android:id="@+id/btn_keypad_four"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad_right_aligned"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/four"/>
                <Button
                    android:id="@+id/btn_keypad_five"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad_right_aligned"
                    android:text="@string/five"
                    android:layout_toRightOf="@id/btn_keypad_four"
                    android:layout_toEndOf="@id/btn_keypad_four"/>
                <Button
                    android:id="@+id/btn_keypad_six"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad"
                    android:text="@string/six"
                    android:layout_toRightOf="@id/btn_keypad_five"
                    android:layout_toEndOf="@id/btn_keypad_five"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relative_row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp">
                <Button
                    android:id="@+id/btn_keypad_seven"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad_right_aligned"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/seven"/>
                <Button
                    android:id="@+id/btn_keypad_eight"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad_right_aligned"
                    android:text="@string/eight"
                    android:layout_toRightOf="@id/btn_keypad_seven"
                    android:layout_toEndOf="@id/btn_keypad_seven"/>
                <Button
                    android:id="@+id/btn_keypad_nine"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad"
                    android:text="@string/nine"
                    android:layout_toRightOf="@id/btn_keypad_eight"
                    android:layout_toEndOf="@id/btn_keypad_eight"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relative_row4"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/btn_keypad_back"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad_right_aligned"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    />
                <Button
                    android:id="@+id/btn_keypad_zero"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    style="@style/key_pad_right_aligned"
                    android:text="@string/zero"
                    android:layout_toRightOf="@id/btn_keypad_back"
                    android:layout_toEndOf="@id/btn_keypad_back"/>
                <Button
                    android:id="@+id/btn_keypad_clear_all"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:textAllCaps="false"
                    android:text="@string/clear_all"
                    style="@style/key_pad"
                    android:layout_toRightOf="@id/btn_keypad_zero"
                    android:layout_toEndOf="@id/btn_keypad_zero"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>
